--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="nav-right">
   <a href="/pages/breed-details.html" class="search-icon">🔎</a>
-    <a href="/pages/quiz.html" class="btn-primary">🐶 Start Quiz</a>
+    <a href="/pages/Login/login.html" class="btn-primary">🐶 Register</a>
   </div>
 <button class="hamburger" id="hamburger-btn" aria-label="Toggle menu">
   <span></span>
