--- a/pages/full-breed-info.html
+++ b/pages/full-breed-info.html
@@ -256,8 +256,8 @@ html, body {
 
 
   <div class="back-links">
-    <a href="results.html" class="back-link">← Back to Matches</a>
-    <a href="#" onclick="history.back(); return false;" class="back-link">← Back to All Breeds</a>
+    <a href="./results.html" class="back-link">← Back to Matches</a>
+    <a href="./breed-details.html" onclick="history.back(); return false;" class="back-link">← Back to All Breeds</a>
   </div>
   <!-- 🐾 Cute Quote Banner -->
 <div class="dog-quote-banner">
