--- a/pages/Login/login.html
+++ b/pages/Login/login.html
@@ -30,10 +30,33 @@
                 <button type="submit" class="btn">Login</button>
                 <p>or Login with social platforms</p>
                 <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://accounts.google.com/o/oauth2/v2/auth?
+client_id=YOUR_GOOGLE_CLIENT_ID&
+redirect_uri=YOUR_ENCODED_REDIRECT_URL&
+response_type=code&
+scope=openid%20email%20profile&
+access_type=offline&
+prompt=consent
+
+" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="https://www.facebook.com/v18.0/dialog/oauth?
+client_id=YOUR_FACEBOOK_APP_ID&
+redirect_uri=YOUR_ENCODED_REDIRECT_URL&
+response_type=code&
+scope=email,public_profile
+
+" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://github.com/login/oauth/authorize?
+client_id=YOUR_GITHUB_CLIENT_ID&
+redirect_uri=YOUR_REDIRECT_URL&
+scope=user
+" class="icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/oauth/v2/authorization?
+response_type=code&
+client_id=YOUR_LINKEDIN_CLIENT_ID&
+redirect_uri=YOUR_REDIRECT_URL&
+scope=r_liteprofile%20r_emailaddress
+" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </form>
         </div>
