--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
   </div>
 <ul class="nav-center" id="mobile-menu">
+    <li><a href="pages/Login/login.html">Register</a></li>
     <li><a href="index.html">Home</a></li>
     <li><a href="/pages/quiz.html">Breed Selector</a></li>
     <li><a href="/pages/breed-details.html">Breed Info</a></li>
@@ -55,6 +56,7 @@
     <li><a href="pages/food-guide.html">food</a></li>
     <li><a href="pages/training-guide.html">Training</a></li>
     <li><a href="#">Contact</a></li>
+   
   </ul>
 
   <div class="nav-right">
